# WSJF

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
docs/: compare.html  enums.html  index.html  models.html  plugin.html  restclient.html  sub_models.html
examples/: basic_example.py
src/WSJF/: __init__.py  compare.py  enums.py  models.py  plugin.py  restclient.py  sub_models.py
tests/: cat.base64  test_additional_data.py  test_asset.py  test_attachment.py  test_basic.py  test_bool.py  test_chart.py  test_comment.py  test_deserialization.py  test_exceptions.py  test_miscinfo.py  test_multiple_limit_step.py  test_numeric.py  test_somethingelse.py  test_strings.py  test_subunit.py  test_what.py
tests/test_data/: test_report_from_us.json  test_report_from_wats.json
